--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,9 +1,9 @@
-streamlit==1.32.0
-pandas==2.1.4
-numpy==1.26.2
-matplotlib==3.8.2
-seaborn==0.13.0
-scikit-learn==1.3.2
-tensorflow==2.15.0
-plotly==5.18.0
-requests==2.31.0
+streamlit
+pandas
+numpy
+matplotlib
+seaborn
+scikit-learn
+tensorflow
+plotly
+requests
